objects/VisitOps__Innovation_Board__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__Capital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Capital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__IdeaCompletedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Idea Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Idea_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Idea Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Innovation_Boards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Idea_Begin_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Idea Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Idea_Came_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Idea Came From</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Iinnovation_Boards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Idea_Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Idea Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Idea_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Idea Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Idea_Status__c</fullName>
        <label>Idea Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Tabled</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Innovative_Idea__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Innovative Idea</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__InventoryManagement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inventory Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Inventory_Management__c</fullName>
        <description>This field is not used anywhere. It is just to clear conflict with Managed Package.</description>
        <label>Inventory Management</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dummy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Location</label>
        <referenceTo>VisitOps__Location__c</referenceTo>
        <relationshipLabel>Innovation Boards</relationshipLabel>
        <relationshipName>Iinnovation_Boards</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Money_This_Idea_Saved_Annually__c</fullName>
        <label>Money Saved (Annually)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Month_Name__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Month__c</fullName>
        <formula>CASE(MONTH( VisitOps__OpenDate__c ), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__OpenDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OpenDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Operations_Expense__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Operations/Expense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Opportunities_for_Defects_or_Errors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Defects or Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Overprocessing_removing_extra_work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overprocessing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Overproduction_doing_work_before_it_s_n__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overproduction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Staffing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Staffing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Time_This_Idea_Saved_Annually_hours__c</fullName>
        <label>Time Saved (Annually/hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Unnecessary_Movement_of_People__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unnecessary People Movement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Unnecessary_Movement_of_Products_or_Mate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unnecessary Movement of Materials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Utilization_of_Talent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Utilization of Talent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Wait_Times__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wait Times</label>
        <type>Checkbox</type>
    </fields>
    <label>Innovation Board</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__Innovative_Idea__c</columns>
        <columns>VisitOps__Location__c</columns>
        <columns>VisitOps__Idea_Assigned_To__c</columns>
        <columns>VisitOps__Idea_Due_Date__c</columns>
        <columns>VisitOps__Idea_Status__c</columns>
        <columns>VisitOps__Idea_Came_From__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IN{0000}</displayFormat>
        <label>Innovation Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Innovation Board</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VisitOps__Location_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(VisitOps__Location__c)</errorConditionFormula>
        <errorDisplayField>VisitOps__Location__c</errorDisplayField>
        <errorMessage>Location is mandatory</errorMessage>
    </validationRules>
</CustomObject>